# Apotheosis

./: .gitignore  CMakeLists.txt  LICENSE  MODDING.md  Makefile  Makefile.bat  NOTICE  README.md  SERVER_POLICY.md  SETUP.md  TRADEMARK.md  WhatNeedToBeDone.md  docker-compose.yml  toolchain-mingw.cmake
build-windows/: CMakeCache.txt
docs/: CODEOWNERS  MODDING.md  SERVER_POLICY.md  SETUP.md  TRADEMARK.md  WhatNeedToBeDone.md
lib/: GeralSetUp.md  HowSetUpForLinuxDebian.md  HowSetUpForWindows.md
scripts/: install_vulkansdk_wine.sh
src/: VulkanApp.cpp  VulkanApp.hpp  main.cpp  main.exemple
src/GUI-config/: imgui-config.hpp
src/client/: BufferManager.cpp  BufferManager.hpp  Camera.cpp  CoreVulkan.cpp  CoreVulkan.hpp  DepthBufferManager.cpp  DepthBufferManager.hpp  DescriptorManager.cpp  DescriptorManager.hpp  MeshLoader.cpp  Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  ShaderLoader.cpp  ShaderLoader.hpp  UI.cpp  Vertex.hpp  imgui-config.hpp  main.cpp
src/client/Shaders/: fragment.glsl  vertex.glsl
src/client/assets/shaders/: fragment.glsl  particle.frag.glsl  particle.vert.glsl  triangle.vert.glsl  vertex.glsl
src/client/batch/: ChunkBatchManager.hpp  RenderBatchManager.cpp  RenderBatchManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/client/batch/instance/: InstanceData.hpp  InstanceDescriptorManager.cpp  InstanceDescriptorManager.hpp  PushConstantObject.hpp  RenderInstance.cpp  RenderInstance.hpp
src/client/batch/material/: Material.cpp  Material.hpp  MaterialDescriptorManager.cpp  MaterialDescriptorManager.hpp  MaterialLayoutBuilder.hpp  TextureImage.cpp  TextureImage.hpp
src/client/batch/mesh/: IndexBufferManager.cpp  IndexBufferManager.hpp  Mesh.cpp  Mesh.hpp  Vertex.hpp  VertexBufferManager.cpp  VertexBufferManager.hpp
src/client/camera/: Camera.cpp  CameraBufferManager.cpp  CameraBufferManager.hpp  UniformBufferObject.hpp
src/client/graphics_pipeline/: DescriptorManager.cpp  DescriptorManager.hpp  GlobalDescriptorManager.cpp  GlobalDescriptorManager.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  RenderPass.cpp  RenderPass.hpp
src/client/image/: ImageColor.cpp  ImageColor.hpp  TextureImage.cpp  TextureImage.hpp  VulkanImageUtils.cpp  VulkanImageUtils.hpp
src/client/mash/: BufferManager.cpp  BufferManager.hpp  IndexBufferManager.cpp  IndexBufferManager.hpp  IndexManager.cpp  IndexManager.hpp  Mesh.cpp  MeshLoader.cpp  MeshLoader.hpp  PushConstantObject.hpp  Vertex.hpp  VertexBufferManager.cpp  VertexBufferManager.hpp  VertexManager.cpp  VertexManager.hpp
src/client/object/: RenderObject.cpp  RenderObject.hpp
src/client/pipeline/: DescriptorManager.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  RenderPass.cpp  RenderPass.hpp  ShaderLoader.cpp  ShaderLoader.hpp
src/client/swapchain/: CommandManager.cpp  CommandManager.hpp  DepthBufferManager.cpp  DepthBufferManager.hpp  FramebufferManager.cpp  FramebufferManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp
src/client/swapchain&framebuffer/: CommandManager.cpp  CommandManager.hpp  DepthBufferManager.cpp  DepthBufferManager.hpp  FramebufferManager.cpp  FramebufferManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp
src/client/ui/: UI.cpp  UI.hpp
src/common/: common.cpp  debug_helper.hpp
src/server/: main.cpp
uml/: test.drawio  test.mdj
